styled home.html

--- a/app/public/home.css
+++ b/app/public/home.css
@@ -1,7 +1,23 @@
+body{
+    font-family: 'Alegreya', serif;
+    text-shadow: 1px 1px 2px red, 0 0 1em red, 0 0 0.2em red;
+    text-shadow: 1px 1px 1px black;
+    color: red;
+    padding: 5em;
+    background: url('static/bg.jpg') no-repeat center center fixed;
+}
+
 main{
     text-align: center;
 }
 
-body{
-    color: darkmagenta;
+.container{
+    background: rgba(255,255,255,.35);
+    padding: 1rem;
+    border-radius: 30px;
+}
+
+.jumbotron{
+    background:rgba(0,0,0,0);
+    opacity: inherit
 }
