updated survey styles

--- a/app/public/home.css
+++ b/app/public/home.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Alegreya', serif;
-    text-shadow: 1px 1px 2px red, 0 0 1em red, 0 0 0.2em red;
+    /* text-shadow: 1px 1px 2px red, 0 0 1em red, 0 0 0.2em red; */
     text-shadow: 1px 1px 1px black;
     color: red;
     padding: 5em;
@@ -20,4 +20,9 @@ main{
 .jumbotron{
     background:rgba(0,0,0,0);
     opacity: inherit
+}
+
+.form-control{
+    margin: 1em auto;
+    width: 25%;
 }
